# office-convert-lambda

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  build-docker.sh  cspell.json
.github/workflows/: build-release.yml  publish-ghcr.yml
client/: Cargo.toml
client/src/: lib.rs
src/: aws.rs  error.rs  event_handler.rs  main.rs  office.rs  storage.rs
