[package]
name = "office-convert-lambda"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/jacobtread/office-convert-lambda"
authors = ["Jacobtread <jacobtread@gmail.com>"]
readme = "./README.md"
description = "Lambda for converting office files using LibreOffice"

[workspace]
members = [".", "./client"]

[dependencies]
# Lambda core
lambda_runtime = "=1.0.1"

# Async runtime
tokio = { version = "=1.48.0", features = ["macros"] }

# Environment variables
dotenvy = "=0.15.7"

# JSON serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"

# Error handling
thiserror = "=2.0.17"
aws-config = "=1.8.12"
aws-sdk-s3 = "=1.118.0"

# Basic logging
tracing = "=0.1.44"

# UUID for unique file IDs
uuid = { version = "=1.19.0", features = ["v4"] }

# Core libreoffice library
libreofficekit = { version = "=0.5" }
